--- a/_data/tag/head.yml
+++ b/_data/tag/head.yml
@@ -88,3 +88,6 @@
 - name:  Forward modeling for EEG source reconstruction
   link:  /workshop/oslo2019/forward_modeling
 
+- name:  Creation of headmodels and sourcemodels for source reconstruction
+  link:  /workshop/paris2019/handson_anatomy
+
