--- a/_data/tag/sourcemodel.yml
+++ b/_data/tag/sourcemodel.yml
@@ -10,3 +10,6 @@
 - name:  Creating a sourcemodel for source-reconstruction of MEG or EEG data
   link:  /tutorial/sourcemodel
 
+- name:  Creation of headmodels and sourcemodels for source reconstruction
+  link:  /workshop/paris2019/handson_anatomy
+
