--- a/_data/tag/mmfaces.yml
+++ b/_data/tag/mmfaces.yml
@@ -16,6 +16,9 @@
 - name:  FieldTrip stats demo
   link:  /workshop/meg-uk-2015/fieldtrip-stats-demo
 
+- name:  Creation of headmodels and sourcemodels for source reconstruction
+  link:  /workshop/paris2019/handson_anatomy
+
 - name:  Groupanalysis
   link:  /workshop/paris2019/handson_groupanalysis
 
