--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -1,8 +1,17 @@
 - name:  Example script for leadfield based on FEM headmodel
   link:  /development/project/example_fem
 
+- name:  Simulate an oscillatory signal with phase resetting
+  link:  /example/phase_reset
+
 - name:  Example MATLAB scripts
+- name:  Plotting the result of source reconstructing on a cortical mesh
   link:  /example
+
+  link:  /example/plotting_the_result_of_source_reconstructing_on_a_cortical_mesh
+
+- name:  Source statistics
+  link:  /example/source_statistics
 
 - name:  Align EEG electrode positions to BEM headmodel
   link:  /example/align_eeg_electrode_positions_to_bem_headmodel
@@ -10,29 +19,59 @@
 - name:  Apply clusterrandanalysis on TFRs of power that were computed with BESA
   link:  /example/apply_clusterrandanalysis_on_tfrs_of_power_that_were_computed_with_besa
 
+- name:  Analyze Steady-State Visual Evoked Potentials (SSVEPs)
+  link:  /example/ssvep
+
 - name:  Converting an example audio dataset for sharing in BIDS
   link:  /example/bids_audio
+
+- name:  Stratify the distribution of one variable that differs in two conditions
+  link:  /example/stratify
 
 - name:  Converting an example behavioral dataset for sharing in BIDS
   link:  /example/bids_behavioral
 
+- name:  Testing BEM created EEG lead fields
+  link:  /example/testing_bem_created_leadfields
+
 - name:  Converting an example EEG dataset for sharing in BIDS
   link:  /example/bids_eeg
+
+- name:  Use independent component analysis (ICA) to remove ECG artifacts
+  link:  /example/use_independent_component_analysis_ica_to_remove_ecg_artifacts
 
 - name:  Converting an example EMG dataset for sharing in BIDS
   link:  /example/bids_emg
 
+- name:  Use independent component analysis (ICA) to remove EOG artifacts
+  link:  /example/use_independent_component_analysis_ica_to_remove_eog_artifacts
+
 - name:  Converting an example eyetracker dataset for sharing in BIDS
   link:  /example/bids_eyetracker
+
+- name:  Use simulated ERPs to explore cluster statistics
+  link:  /example/use_simulated_erps_to_explore_cluster_statistics
+
+- name:  Use your own forward leadfield model in an inverse beamformer computation
+  link:  /example/use_your_own_forward_leadfield_model_in_an_inverse_beamformer_computation
 
 - name:  Converting an example motion tracking dataset for sharing in BIDS
   link:  /example/bids_motion
 
+- name:  Can I create an artificial CTF dataset using MATLAB?
+  link:  /example/writing_simulated_data_to_a_ctf_dataset
+
 - name:  Converting the combined MEG/fMRI MOUS dataset for sharing in BIDS
   link:  /example/bids_mous
 
+- name:  Getting started with real-time analysis for BCI/neurofeedback
+  link:  /getting_started/realtime
+
 - name:  Combining simultaneous recordings in BIDS
   link:  /example/bids_pom
+
+- name:  Fourier analysis of neuronal oscillations and synchronization
+  link:  /tutorial/fourier
 
 - name:  Converting an example video dataset for sharing in BIDS
   link:  /example/bids_video
@@ -40,8 +79,14 @@
 - name:  Example analysis pipeline for Biosemi data
   link:  /example/biosemi
 
+- name:  Making a memory efficient analysis script
+  link:  /tutorial/memory
+
 - name:  How to use ft_checkconfig
   link:  /example/checkconfig
+
+- name:  Creating a clean analysis script
+  link:  /tutorial/scripting
 
 - name:  Effect of SNR on Coherence
   link:  /example/coherence_snr
