--- a/_data/tag/source.yml
+++ b/_data/tag/source.yml
@@ -157,3 +157,6 @@
 - name:  Creation of headmodels and sourcemodels for source reconstruction
   link:  /workshop/paris2019/handson_anatomy
 
+- name:  Localizing sources of neural sources using beamformer techniques
+  link:  /workshop/paris2019/handson_sourceanalysis
+
