--- a/_data/tag/meg-uk-2015.yml
+++ b/_data/tag/meg-uk-2015.yml
@@ -1,7 +1,7 @@
 - name:  MEG-UK 2015 meeting
   link:  /workshop/meg-uk-2015
 
-- name:  Face recognition dataset
+- name:  Multimodal faces dataset
   link:  /workshop/meg-uk-2015/dataset
 
 - name:  SPM DCM demo
