--- a/_data/tag/paris2019.yml
+++ b/_data/tag/paris2019.yml
@@ -1,7 +1,7 @@
 - name:  Practical MEEG workshop at ICM in Paris
   link:  /workshop/paris2019
 
-- name:  Face recognition dataset
+- name:  Multimodal faces dataset
   link:  /workshop/paris2019/dataset
 
 - name:  Creation of headmodels and sourcemodels for source reconstruction
