--- a/_data/tag/mmfaces.yml
+++ b/_data/tag/mmfaces.yml
@@ -7,6 +7,9 @@
 - name:  MEG-UK 2015 meeting
   link:  /workshop/meg-uk-2015
 
+- name:  Multimodal faces dataset
+  link:  /workshop/meg-uk-2015/dataset
+
 - name:  FieldTrip beamformer demo
   link:  /workshop/meg-uk-2015/fieldtrip-beamformer-demo
 
@@ -15,6 +18,9 @@
 
 - name:  FieldTrip stats demo
   link:  /workshop/meg-uk-2015/fieldtrip-stats-demo
+
+- name:  Multimodal faces dataset
+  link:  /workshop/paris2019/dataset
 
 - name:  Creation of headmodels and sourcemodels for source reconstruction
   link:  /workshop/paris2019/handson_anatomy
