--- a/_data/tag/paris2019.yml
+++ b/_data/tag/paris2019.yml
@@ -19,3 +19,6 @@
 - name:  Localizing sources of neural sources using beamformer techniques
   link:  /workshop/paris2019/handson_sourceanalysis
 
+- name:  Instructions for the USB stick
+  link:  /workshop/paris2019/usb_instructions
+
