--- a/_data/tag/statistics.yml
+++ b/_data/tag/statistics.yml
@@ -1,7 +1,7 @@
 - name:  Apply clusterrandanalysis on TFRs of power that were computed with BESA
   link:  /example/apply_clusterrandanalysis_on_tfrs_of_power_that_were_computed_with_besa
 
-- name:  Computing and using estimates of effect size
+- name:  Computing and reporting the effect size
   link:  /example/effectsize
 
 - name:  Source statistics
