FIX #193 - reorganized code for the stats tutorials to ensure that FIC and FC are always mentioned and computed in the same order recomputed the figures in the eventrelatedstatistirc tutorial - also many cleanups to other sections of code, nothing functional, only formatting

--- a/_data/tag/download.yml
+++ b/_data/tag/download.yml
@@ -10,6 +10,6 @@
 - name:  I am working at the Donders, should I also download FieldTrip?
   link:  /faq/i_am_working_at_the_donders_should_i_also_download_fieldtrip
 
-- name:  Which version of FieldTrip should I download from the ftp server?
+- name:  Which version of FieldTrip should I download from the FTP server?
   link:  /faq/which_version_of_fieldtrip_should_i_download_from_the_ftp_server
 
