--- a/_data/tag/meg-language.yml
+++ b/_data/tag/meg-language.yml
@@ -1,3 +1,6 @@
+- name:  Computing and reporting the effect size
+  link:  /example/effectsize
+
 - name:  Which datasets are used in the documentation and where are they used?
   link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
@@ -18,6 +21,9 @@
 
 - name:  Event related averaging and MEG planar gradient
   link:  /tutorial/eventrelatedaveraging
+
+- name:  Parametric and non-parametric statistics on event-related fields
+  link:  /tutorial/eventrelatedstatistics
 
 - name:  Creating a BEM volume conduction model of the head for source-reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_bem
