--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -13,6 +13,9 @@
 - name:  Create MNI-aligned grids in individual head-space
   link:  /example/create_single-subject_grids_in_individual_head_space_that_are_all_aligned_in_mni_space
 
+- name:  Computing and reporting the effect size
+  link:  /example/effectsize
+
 - name:  Fit a dipole to the tactile ERF after mechanical stimulation
   link:  /example/fit_a_dipole_to_the_tactile_erf_after_mechanical_stimulation
 
