--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -379,6 +379,9 @@
 - name:  MATLAB version 7.3 (2006b) crashes when I try to do ...
   link:  /faq/matlab_version_7.3_2006b_crashes_when_i_try_to_do
 
+- name:  MATLAB complains that mexmaci64 cannot be opened because the developer cannot be verified
+  link:  /faq/mexmaci64_cannot_be_opened_because_the_developer_cannot_be_verified
+
 - name:  How does MTMCONVOL work?
   link:  /faq/mtmconvol
 
