updated links for about, support and issues cleaned up other pages as well and fixed (already) broken links

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@
 - name: Documentation
   link: /documentation
 
-- name: Community
-  link: /community
+- name: Support
+  link: /support
 
 - name: Workshops
   link: /workshop
@@ -17,4 +17,4 @@
   link: /download
 
 - name: About
-  link: /contact
+  link: /about
