--- a/_data/tag/support.yml
+++ b/_data/tag/support.yml
@@ -1,5 +1,5 @@
-- name:  Contribute or request support
-  link:  /contribute
+- name:  Contribute
+  link:  /development/contribute
 
 - name:  Reporting issues
   link:  /development/issues
