--- a/_data/tag/blackrock.yml
+++ b/_data/tag/blackrock.yml
@@ -1,3 +1,6 @@
 - name:  Getting started with Blackrock data
   link:  /getting_started/blackrock
 
+- name:  Getting started with Cyberkinetics data
+  link:  /getting_started/cyberkinetics
+
