--- a/_data/tag/data.yml
+++ b/_data/tag/data.yml
@@ -100,7 +100,7 @@
 - name:  Getting started with Neuralynx data
   link:  /getting_started/neuralynx
 
-- name:  Getting started with the Neuralynx data recorded at the Donders Institute
+- name:  Getting started with Neuralynx data recorded at the Donders Institute
   link:  /getting_started/neuralynx_fcdc
 
 - name:  Getting started with Neuromag/Elekta/Megin data
@@ -111,6 +111,9 @@
 
 - name:  Getting started with Plexon data
   link:  /getting_started/plexon
+
+- name:  Getting started with Ricoh data
+  link:  /getting_started/ricoh
 
 - name:  Getting started with Yokogawa data
   link:  /getting_started/yokogawa
