--- a/_data/tag/lfp.yml
+++ b/_data/tag/lfp.yml
@@ -13,7 +13,7 @@
 - name:  Getting started with Neuralynx data
   link:  /getting_started/neuralynx
 
-- name:  Getting started with the Neuralynx data recorded at the Donders Institute
+- name:  Getting started with Neuralynx data recorded at the Donders Institute
   link:  /getting_started/neuralynx_fcdc
 
 - name:  Getting started with Plexon data
