--- a/_data/tag/neuralynx.yml
+++ b/_data/tag/neuralynx.yml
@@ -7,6 +7,6 @@
 - name:  Getting started with Neuralynx data
   link:  /getting_started/neuralynx
 
-- name:  Getting started with the Neuralynx data recorded at the Donders Institute
+- name:  Getting started with Neuralynx data recorded at the Donders Institute
   link:  /getting_started/neuralynx_fcdc
 
