--- a/_data/tag/email.yml
+++ b/_data/tag/email.yml
@@ -4,6 +4,9 @@
 - name:  How should I share example data with the email list or developers?
   link:  /faq/how_should_i_send_example_data_to_the_developers
 
+- name:  How to ask good questions to the community?
+  link:  /faq/how_to_ask_good_questions_to_the_community
+
 - name:  Why am I not allowed to post to the discussion list?
   link:  /faq/why_am_i_not_allowed_to_post_to_the_discussion_list
 
