--- a/_data/tag/support.yml
+++ b/_data/tag/support.yml
@@ -1,3 +1,6 @@
+- name:  About the FieldTrip project
+  link:  /about
+
 - name:  Contribute
   link:  /development/contribute
 
@@ -6,4 +9,10 @@
 
 - name:  Discussion List
   link:  /discussion_list
+
+- name:  How to ask good questions to the community?
+  link:  /faq/how_to_ask_good_questions_to_the_community
+
+- name:  Support
+  link:  /support
 
