--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -1,17 +1,32 @@
+- name:  Creation of headmodels and sourcemodels for source reconstruction
+  link:  /workshop/paris2019/handson_anatomy
+
 - name:  MEG dataformats
   link:  /dataformat/meg
+
+- name:  Group analysis
+  link:  /workshop/paris2019/handson_groupanalysis
 
 - name:  Combined EEG and MEG source reconstruction
   link:  /example/combined_eeg_and_meg_source_reconstruction
 
+- name:  From raw data to ERP
+  link:  /workshop/paris2019/handson_raw2erp
+
 - name:  Common filters in beamforming
   link:  /example/common_filters_in_beamforming
+
+- name:  Time-frequency analysis using Hanning window, multitapers and wavelets
+  link:  /workshop/paris2019/handson_sensoranalysis
 
 - name:  Compute forward simulated data and apply a beamformer scan
   link:  /example/compute_forward_simulated_data_and_apply_a_beamformer_scan
 
 - name:  Create MNI-aligned grids in individual head-space
   link:  /example/create_single-subject_grids_in_individual_head_space_that_are_all_aligned_in_mni_space
+
+- name:  Localizing sources of neural sources using beamformer techniques
+  link:  /workshop/paris2019/handson_sourceanalysis
 
 - name:  Computing and reporting the effect size
   link:  /example/effectsize
