--- a/_data/tag/toolkit2020.yml
+++ b/_data/tag/toolkit2020.yml
@@ -1,3 +1,12 @@
 - name:  Advanced MEG/EEG toolkit at the Donders
   link:  /workshop/toolkit2020
 
+- name:  Lessons learned
+  link:  /workshop/toolkit2020/lessons_learned
+
+- name:  Preparation for the online toolkit
+  link:  /workshop/toolkit2020/preparation
+
+- name:  Test your MATLAB and FieldTrip installation in advance
+  link:  /workshop/toolkit2020/test_installation
+
