--- a/_data/tag/toolkit2020.yml
+++ b/_data/tag/toolkit2020.yml
@@ -1,6 +1,9 @@
 - name:  Advanced MEG/EEG toolkit at the Donders
   link:  /workshop/toolkit2020
 
+- name:  Code of Conduct
+  link:  /workshop/toolkit2020/code_of_conduct
+
 - name:  Lessons learned
   link:  /workshop/toolkit2020/lessons_learned
 
