--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -130,6 +130,9 @@
 - name:  Getting started with reading raw EEG or MEG data
   link:  /example/getting_started_with_reading_raw_eeg_or_meg_data
 
+- name:  Using General Linear Modeling on time series data
+  link:  /example/glm_timeseries
+
 - name:  How to incorporate head movements in MEG analysis
   link:  /example/how_to_incorporate_head_movements_in_meg_analysis
 
