--- a/_data/tag/guidelines.yml
+++ b/_data/tag/guidelines.yml
@@ -13,6 +13,6 @@
 - name:  Guidelines for audio and video material
   link:  /development/guideline/video
 
-- name:  Website syntax and formatting Website syntax and formatting
+- name:  Website syntax and formatting Website syntax and formatting New page title
   link:  /development/guideline/website
 
