--- a/_data/tag/opm.yml
+++ b/_data/tag/opm.yml
@@ -7,9 +7,6 @@
 - name:  Accessing the FieldTrip source code through CVS
   link:  /development/cvs
 
-- name:  Code testing and release
-  link:  /development/dashboard
-
 - name:  Data structures used by FieldTrip
   link:  /development/datastructure
 
@@ -28,7 +25,7 @@
 - name:  Guidelines for audio and video material
   link:  /development/guideline/video
 
-- name:  Website syntax and formatting Website syntax and formatting
+- name:  Website syntax and formatting Website syntax and formatting New page title
   link:  /development/guideline/website
 
 - name:  Reporting issues
@@ -87,6 +84,9 @@
 
 - name:  Accessing the FieldTrip source code through SVN
   link:  /development/svn
+
+- name:  Code testing and release versions
+  link:  /development/testing
 
 - name:  How can I keep track of changes to the code?
   link:  /faq/how_can_i_keep_track_of_the_changes_to_the_code
