--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -97,6 +97,9 @@
 - name:  Preprocessing and averaging of single-channel NIRS data
   link:  /tutorial/nirs_singlechannel
 
+- name:  Plotting data at the channel and source level
+  link:  /tutorial/plotting
+
 - name:  Trigger-based trial selection
   link:  /tutorial/preprocessing
 
