--- a/_data/tag/ct.yml
+++ b/_data/tag/ct.yml
@@ -1,6 +1,9 @@
 - name:  MEG dataformats
   link:  /dataformat/meg
 
+- name:  Connectivity estimates for EEG/MEG time series data
+  link:  /development/module/connectivity
+
 - name:  CTF
   link:  /development/realtime/ctf
 
