--- a/_data/tag/connectivity.yml
+++ b/_data/tag/connectivity.yml
@@ -1,3 +1,6 @@
+- name:  Connectivity estimates for EEG/MEG time series data
+  link:  /development/module/connectivity
+
 - name:  Conditional Granger causality in the frequency domain
   link:  /example/connectivity_conditional_granger
 
