--- a/_data/tag/distributed.yml
+++ b/_data/tag/distributed.yml
@@ -1,6 +1,9 @@
 - name:  Distributed computing using the MATLAB engine system
   link:  /development/module/engine
 
+- name:  Distributed computing using a peer-to-peer cluster
+  link:  /development/module/peer
+
 - name:  Distributed computing using a Linux compute cluster
   link:  /development/module/qsub
 
