--- a/_data/tag/inverse.yml
+++ b/_data/tag/inverse.yml
@@ -1,3 +1,6 @@
+- name:  Inverse source parameter estimates from EEG/MEG data
+  link:  /development/module/inverse
+
 - name:  How can I visualize the different geometrical objects that are needed for forward and inverse computations?
   link:  /faq/how_can_i_visualize_the_different_geometrical_objects_that_are_needed_for_forward_and_inverse_computations
 
