--- a/_data/tag/plotting.yml
+++ b/_data/tag/plotting.yml
@@ -1,3 +1,6 @@
+- name:  Plotting of channel-level, source-level and other geometrical data related to EEG/MEG
+  link:  /development/module/plotting
+
 - name:  Creating a layout for plotting NIRS optodes and channels
   link:  /example/nirs_layout
 
