--- a/_data/tag/sharing.yml
+++ b/_data/tag/sharing.yml
@@ -46,3 +46,6 @@
 - name:  How can I anonymize data processed in FieldTrip?
   link:  /faq/how_can_i_anonymize_fieldtrip_data
 
+- name:  Where can I find open access MEG/EEG data?
+  link:  /faq/open_data
+
