--- a/_data/tag/anonymize.yml
+++ b/_data/tag/anonymize.yml
@@ -1,6 +1,3 @@
-- name:  Converting an example EEG dataset for sharing in BIDS
-  link:  /example/bids_eeg
-
 - name:  Converting the combined MEG/fMRI MOUS dataset for sharing in BIDS
   link:  /example/bids_mous
 
@@ -10,7 +7,7 @@
 - name:  How can I anonymize or deidentify an anatomical MRI?
   link:  /faq/how_can_i_anonymize_an_anatomical_mri
 
-- name:  How can I anonymize DICOM files?
+- name:  How can I anonymize or deidentify DICOM files?
   link:  /faq/how_can_i_anonymize_dicom_files
 
 - name:  How can I anonymize data processed in FieldTrip?
