--- a/_data/tag/brainvision.yml
+++ b/_data/tag/brainvision.yml
@@ -1,6 +1,9 @@
 - name:  BrainVision Recorder Remote Data Access (RDA)
   link:  /development/realtime/rda
 
+- name:  How can I anonymize or deidentify a BrainVision dataset?
+  link:  /faq/how_can_i_anonymize_a_brainvision_dataset
+
 - name:  Getting started with BrainVision Analyzer and Easycap
   link:  /getting_started/brainvision
 
