--- a/_data/tag/raw.yml
+++ b/_data/tag/raw.yml
@@ -10,6 +10,9 @@
 - name:  What dataformats are supported?
   link:  /faq/dataformat
 
+- name:  How can I anonymize or deidentify a BrainVision dataset?
+  link:  /faq/how_can_i_anonymize_a_brainvision_dataset
+
 - name:  How can I anonymize or deidentify a CTF dataset?
   link:  /faq/how_can_i_anonymize_a_ctf_dataset
 
