--- a/_data/tag/sharing.yml
+++ b/_data/tag/sharing.yml
@@ -34,6 +34,9 @@
 - name:  How can I share my MEG data?
   link:  /faq/data_sharing
 
+- name:  How can I anonymize or deidentify a BrainVision dataset?
+  link:  /faq/how_can_i_anonymize_a_brainvision_dataset
+
 - name:  How can I anonymize or deidentify a CTF dataset?
   link:  /faq/how_can_i_anonymize_a_ctf_dataset
 
