--- a/_data/tag/support.yml
+++ b/_data/tag/support.yml
@@ -13,6 +13,9 @@
 - name:  How to ask good questions to the community?
   link:  /faq/how_to_ask_good_questions_to_the_community
 
+- name:  Privacy Policy
+  link:  /privacy
+
 - name:  Support
   link:  /support
 
