--- a/_data/tag/mex.yml
+++ b/_data/tag/mex.yml
@@ -10,6 +10,6 @@
 - name:  How can I compile the mex files on macOS?
   link:  /faq/how_can_i_compile_the_mex_files_on_os_x
 
-- name:  MATLAB complains about a missing or invalid MEX file, what should I do?
+- name:  MATLAB complains about a missing or invalid mex file, what should I do?
   link:  /faq/matlab_complains_about_a_missing_or_invalid_mex_file_what_should_i_do
 
