--- a/_data/tag/polhemus.yml
+++ b/_data/tag/polhemus.yml
@@ -1,3 +1,6 @@
+- name:  How should I report the positions of the fiducial points on the head?
+  link:  /faq/how_should_i_report_the_positions_of_the_fiducial_points_on_the_head
+
 - name:  Should I use a Polhemus or a Structure Sensor to record electrode positions?
   link:  /faq/structuresensor
 
