--- a/_data/tag/attention.yml
+++ b/_data/tag/attention.yml
@@ -4,6 +4,9 @@
 - name:  Multivariate analysis of electrophysiological data
   link:  /tutorial/multivariateanalysis
 
+- name:  Preprocessing and analysis of spike-train data
+  link:  /tutorial/spike
+
 - name:  Preprocessing and analysis of spike and local field potential data
   link:  /tutorial/spikefield
 
