--- a/_data/tag/coordinate.yml
+++ b/_data/tag/coordinate.yml
@@ -16,6 +16,9 @@
 - name:  How to change the MRI orientation, the voxel size or the field-of-view?
   link:  /faq/how_change_mri_orientation_size_fov
 
+- name:  How should I report the positions of the fiducial points on the head?
+  link:  /faq/how_should_i_report_the_positions_of_the_fiducial_points_on_the_head
+
 - name:  How to coregister an anatomical MRI with the gradiometer or electrode positions?
   link:  /faq/how_to_coregister_an_anatomical_mri_with_the_gradiometer_or_electrode_positions
 
@@ -24,4 +27,7 @@
 
 - name:  Getting started with Yokogawa data
   link:  /getting_started/yokogawa
+
+- name:  Localizing electrodes using a 3D-scanner
+  link:  /tutorial/electrode
 
