--- a/_data/tag/electrode.yml
+++ b/_data/tag/electrode.yml
@@ -10,6 +10,9 @@
 - name:  How can I inspect the electrode impedances of my data?
   link:  /faq/how_can_i_inspect_the_electrode_impedances_of_my_data
 
+- name:  How should I report the positions of the fiducial points on the head?
+  link:  /faq/how_should_i_report_the_positions_of_the_fiducial_points_on_the_head
+
 - name:  Should I use a Polhemus or a Structure Sensor to record electrode positions?
   link:  /faq/structuresensor
 
