--- a/_data/tag/spike-placefield.yml
+++ b/_data/tag/spike-placefield.yml
@@ -1,3 +1,6 @@
 - name:  Which datasets are used in the documentation and where are they used?
   link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
+- name:  Preprocessing and analysis of spike-train data
+  link:  /tutorial/spike
+
