--- a/_data/tag/nirs.yml
+++ b/_data/tag/nirs.yml
@@ -1,3 +1,6 @@
+- name:  Analyzing NIRS data recorded during unilateral finger- and foot-tapping
+  link:  /example/nirs_fingertapping
+
 - name:  Creating a layout for plotting NIRS optodes and channels
   link:  /example/nirs_layout
 
@@ -6,6 +9,15 @@
 
 - name:  Getting started with Artinis NIRS data
   link:  /getting_started/artinis
+
+- name:  Getting started with Hitachi NIRS data
+  link:  /getting_started/hitachi
+
+- name:  Getting started with NIRx NIRS data
+  link:  /getting_started/nirx
+
+- name:  Getting started with Shimadzu NIRS data
+  link:  /getting_started/shimadzu
 
 - name:  Preprocessing and averaging of multi-channel NIRS data
   link:  /tutorial/nirs_multichannel
