--- a/_data/tag/dataformat.yml
+++ b/_data/tag/dataformat.yml
@@ -37,14 +37,26 @@
 - name:  Reading is slow, can I write my raw data to a more efficient file format?
   link:  /faq/reading_is_slow_can_i_write_my_raw_data_to_a_more_efficient_file_format
 
-- name:  Getting started with 20%, 10% and 5% electrode arrangements
-  link:  /getting_started/1020
-
 - name:  Getting started with ASA and EEProbe
   link:  /getting_started/antneuro
 
+- name:  How can I use AnyWave for reviewing continuous data?
+  link:  /getting_started/anywave
+
+- name:  Getting started with Artinis NIRS data
+  link:  /getting_started/artinis
+
+- name:  Getting started with ABM's B-Alert EEG data
+  link:  /getting_started/b_alert
+
 - name:  Getting started with BabySQUID data
   link:  /getting_started/babysquid
+
+- name:  Getting started with BESA data
+  link:  /getting_started/besa
+
+- name:  Getting started with BioImage Suite
+  link:  /getting_started/bioimage
 
 - name:  Getting started with Biosemi BDF data
   link:  /getting_started/biosemi
@@ -67,8 +79,20 @@
 - name:  Getting started with EDF (European Data Format) data
   link:  /getting_started/edf
 
+- name:  Getting started with EEGLAB
+  link:  /getting_started/eeglab
+
 - name:  Getting started with Philips/EGI data
   link:  /getting_started/egi
+
+- name:  Getting started with SR-Research EyeLink eye-tracker data
+  link:  /getting_started/eyelink
+
+- name:  Getting started with Hitachi NIRS data
+  link:  /getting_started/hitachi
+
+- name:  Getting started with LORETA
+  link:  /getting_started/loreta
 
 - name:  Getting started with Neuralynx data
   link:  /getting_started/neuralynx
@@ -82,14 +106,23 @@
 - name:  Getting started with Nicolet data
   link:  /getting_started/nicolet
 
+- name:  Getting started with NIRx NIRS data
+  link:  /getting_started/nirx
+
 - name:  Getting started with Neurodata Without Borders (NWB) data
   link:  /getting_started/nwb
+
+- name:  Getting started with OPM data recorded at the FIL
+  link:  /getting_started/opm_fil
 
 - name:  Getting started with Plexon data
   link:  /getting_started/plexon
 
 - name:  Getting started with Ricoh data
   link:  /getting_started/ricoh
+
+- name:  Getting started with Shimadzu NIRS data
+  link:  /getting_started/shimadzu
 
 - name:  Getting started with XSens motion capture data
   link:  /getting_started/xsens
