--- a/_data/tag/eeglab.yml
+++ b/_data/tag/eeglab.yml
@@ -1,3 +1,6 @@
 - name:  Why is FieldTrip developed separately from EEGLAB?
   link:  /faq/why_is_fieldtrip_developed_separately_from_eeglab
 
+- name:  Getting started with EEGLAB
+  link:  /getting_started/eeglab
+
