--- a/_data/tag/nirs.yml
+++ b/_data/tag/nirs.yml
@@ -13,6 +13,9 @@
 - name:  Getting started with Hitachi NIRS data
   link:  /getting_started/hitachi
 
+- name:  Getting started with HOMER
+  link:  /getting_started/homer
+
 - name:  Getting started with NIRx NIRS data
   link:  /getting_started/nirx
 
