--- a/_data/tag/data.yml
+++ b/_data/tag/data.yml
@@ -118,7 +118,7 @@
 - name:  Getting started with Hitachi NIRS data
   link:  /getting_started/hitachi
 
-- name:  Getting started with HOMER
+- name:  Getting started with Homer
   link:  /getting_started/homer
 
 - name:  Getting started with LORETA
