--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -160,6 +160,9 @@
 - name:  Creating a layout for plotting NIRS optodes and channels
   link:  /example/nirs_layout
 
+- name:  Analyzing NIRS data recorded during listening to and repeating speech
+  link:  /example/nirs_speech
+
 - name:  Simulate an oscillatory signal with phase resetting
   link:  /example/phase_reset
 
