--- a/_data/tag/nirs.yml
+++ b/_data/tag/nirs.yml
@@ -4,6 +4,9 @@
 - name:  Creating a layout for plotting NIRS optodes and channels
   link:  /example/nirs_layout
 
+- name:  Analyzing NIRS data recorded during listening to and repeating speech
+  link:  /example/nirs_speech
+
 - name:  Which datasets are used in the documentation and where are they used?
   link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
