--- a/_data/tag/shimadzu.yml
+++ b/_data/tag/shimadzu.yml
@@ -1,6 +1,9 @@
 - name:  Analyzing NIRS data recorded during unilateral finger- and foot-tapping
   link:  /example/nirs_fingertapping
 
+- name:  Analyzing NIRS data recorded during listening to and repeating speech
+  link:  /example/nirs_speech
+
 - name:  Getting started with Shimadzu NIRS data
   link:  /getting_started/shimadzu
 
