--- a/_data/tag/support.yml
+++ b/_data/tag/support.yml
@@ -7,7 +7,7 @@
 - name:  Reporting issues
   link:  /development/issues
 
-- name:  Discussion List
+- name:  Email discussion list
   link:  /discussion_list
 
 - name:  How to ask good questions to the community?
