--- a/_data/tag/connectivity.yml
+++ b/_data/tag/connectivity.yml
@@ -20,6 +20,9 @@
   link:  /tutorial/networkanalysis
 
 - name:  Whole brain connectivity and network analysis
+  link:  /tutorial/networkanalysis_eeg
+
+- name:  Whole brain connectivity and network analysis
   link:  /tutorial/networkanalysis_old
 
 - name:  Simulating and estimating, what about model (mis)match?
