--- a/_data/tag/nirs.yml
+++ b/_data/tag/nirs.yml
@@ -1,3 +1,6 @@
+- name:  Converting an example NIRS dataset for sharing in BIDS
+  link:  /example/bids_nirs
+
 - name:  Analyzing NIRS data recorded during unilateral finger- and foot-tapping
   link:  /example/nirs_fingertapping
 
