--- a/_data/tag/opm.yml
+++ b/_data/tag/opm.yml
@@ -16,6 +16,9 @@
 - name:  Code guidelines
   link:  /development/guideline/code
 
+- name:  Communication guidelines
+  link:  /development/guideline/communication
+
 - name:  Documentation guidelines this is the title, it should also be the first top-level heading
   link:  /development/guideline/documentation
 
