--- a/_data/tag/video.yml
+++ b/_data/tag/video.yml
@@ -4,6 +4,9 @@
 - name:  Converting an example video dataset for sharing in BIDS
   link:  /example/bids_video
 
+- name:  Making a synchronous movie of EEG or NIRS combined with video recordings
+  link:  /example/video_eeg
+
 - name:  How can I play back EEG/MEG and synchronous audio or video?
   link:  /faq/audiovideo
 
